--- a/emissions.html
+++ b/emissions.html
@@ -23,7 +23,7 @@
    <!--     <button id="prevPage">&lt Prev Page</button> -->
    <!-- </div> -->
    <div style="float:right;">
-       <button onclick="location.href='/oil.html'" id="nextPage">Crude Oil &gt</button>
+       <button onclick="location.href='/CS416-Narrative-Visualization/oil.html'" id="nextPage">Crude Oil &gt</button>
    </div>
 </div>
 <div id="barchart" style="clear:both; text-align: center;"></div>
