--- a/netzero.html
+++ b/netzero.html
@@ -20,7 +20,7 @@
 <h1>Net-Zero Emissions Targets</h1>
 <div id="buttonsdiv" style="width: 100%; max-width: 1300px; margin-left: auto; margin-right: auto;">
    <div style="float:left;">
-       <button onclick="location.href='/oil.html'" id="prevPage">&lt Crude Oil</button>
+       <button onclick="location.href='/CS416-Narrative-Visualization/oil.html'" id="prevPage">&lt Crude Oil</button>
    </div>
    <!-- <div style="float:right;"> -->
    <!--     <button onclick="location.href='/oil.html'" id="nextPage">Crude Oil &gt</button> -->
