--- a/oil.html
+++ b/oil.html
@@ -20,10 +20,10 @@
 <h1> Crude Oil Production over Time</h1>
 <div id="buttonsdiv" style="width: 100%; max-width: 1300px; margin-left: auto; margin-right: auto;">
    <div style="float:left; width: 80%">
-       <button onclick="location.href='/emissions.html'" id="prevpage">&lt CO2 Emissions</button>
+       <button onclick="location.href='/CS416-Narrative-Visualization/emissions.html'" id="prevpage">&lt CO2 Emissions</button>
    </div>
    <div style="float:right;">
-       <button onclick="location.href='/netzero.html'" id="nextPage">Net Zero Targets &gt</button>
+       <button onclick="location.href='/CS416-Narrative-Visualization/netzero.html'" id="nextPage">Net Zero Targets &gt</button>
    </div>
 </div>
 <div id="linechart" style="clear:both; text-align: center;"></div>
